# dothack-backend

./: .env.example  .gitignore  AUTHENTICATION_REVIEW_SUMMARY.md  Procfile  RAILWAY_ENV_VARS.md  README.md  dothack-backendprd.md  nixpacks.json  nixpacks.toml  nixpacks.toml.backup  pyproject.toml  railway.json  requirements.txt  test_all_endpoints.py  verify_zerodb.py
.claude/: CLAUDE.md  ISSUE_TRACKING_ENFORCEMENT.md  settings.local.json.example
.claude/agents/: agent.md.template
.claude/commands/: command.md.template
.github/workflows/: ci.yml  deploy.yml
docs/: AINATIVE_AUTH_INTEGRATION.md  API_DOCUMENTATION.md  AUTHENTICATION_ARCHITECTURE.md  FRONTEND_BACKEND_GAP_ANALYSIS.md  FRONTEND_ISSUES_SUMMARY.md  GITHUB_ISSUES_SUMMARY.md  IMPLEMENTATION_STATUS.md  ISSUE_24_IMPLEMENTATION_SUMMARY.md  OAUTH_FLOWS.md  PARALLEL_IMPLEMENTATION_SUMMARY.md  PRD_AUTH_UPDATE.md  QUICK_REFERENCE.md  README.md
docs/planning/: BACKLOG.md
go-services/leaderboard/: main.go
postman/: DotHack-API.postman_collection.json
python-api/: .env.example  __init__.py  config.py  main.py  requirements-dev.txt  requirements.txt
python-api/api/: __init__.py  dependencies.py
python-api/middleware/: __init__.py  rate_limit.py
python-api/models/: __init__.py  participants.py
python-api/scripts/: migrate_supabase_hackathon_themes.py
python-api/services/: analytics_service.py  authorization.py  embedding_service.py  event_service.py  export_service.py  file_service.py  hackathon_service.py  hackathon_theme_service.py  judging_service.py  participants_service.py  recommendations_service.py  rlhf_service.py  search_service.py  submission_service.py  team_service.py
python-api/tests/: conftest.py  test_ainative_auth_client.py  test_analytics.py  test_auth_error_handling.py  test_authorization.py  test_config.py  test_dependencies.py  test_embedding_service.py  test_embeddings.py  test_export.py  test_files.py  test_hackathon_endpoints.py  test_hackathon_service.py  test_hackathon_themes.py  test_health.py  test_judging_endpoints.py  test_judging_service.py  test_main.py  test_participants.py  test_recommendations.py  test_search.py  test_search_service.py  test_similar_submissions.py  test_submission_endpoints.py  test_submission_service.py  test_team_endpoints.py  test_team_service.py  test_zerodb_client.py
scripts/: compress_claude_docs.py  create-issues.sh  create_hackathon_themes_table.py  migrate_supabase_hackathon_themes.py  setup-zerodb-tables.py
(+47 files in other folders)
